--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -18,3 +18,16 @@ a {
 .walletconnect-qrcode__text {
   margin-bottom: 0.5em !important;
 }
+
+.aspect {
+  width: 100%;
+  height: 0;
+  position: relative;
+  .ratio {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+}
