--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -31,3 +31,88 @@ a {
     width: 100%;
   }
 }
+
+
+.editor {
+  width: 100%;
+  position: relative;
+  
+  .menu-bar {
+    top: -1px;
+    left: -1px;
+    width: 100%;    
+  }
+  
+  &.basic {
+    border-radius: 0;
+    transition: all 0.25s;
+    
+    .wrapper {
+      min-height: 100px;
+      max-height: 200px;
+      overflow-y: auto;
+
+    }
+    // &.is-focussed {
+    //   border-color: var(--chakra-colors-gray-500);
+    //   box-shadow: 0 0 0 1px var(--chakra-colors-gray-500);
+    // }
+
+    .ProseMirror {
+      height: 100%;
+      min-height: 100px;
+      background-color:transparent;
+      overflow-y: auto;
+      padding: 0;
+    }
+  }
+
+  &.is-error { 
+    &.basic {
+      border: 1px solid var(--chakra-colors-red-400);
+      box-shadow: 0 0 0 1px var(--chakra-colors-red-400);
+    }
+  }
+
+  &.has-char-count {
+    .ProseMirror {
+      padding-bottom: var(--chakra-space-8);
+    }
+  }
+  .char-count {
+    position: absolute;
+    bottom: var(--chakra-space-2);
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.ProseMirror {
+  overflow-y: auto;
+  > * + * {
+    margin-top: 0.75em;
+  } 
+  
+  min-height: 100px;
+  &:focus {
+    outline: none;
+  }
+}
+
+/* Placeholder (at the top) */
+.ProseMirror p.is-editor-empty:first-child::before {
+  content: attr(data-placeholder);
+  float: left;
+  color: var(--chakra-colors-gray-200);
+  pointer-events: none;
+  height: 0;
+}
+
+/* Placeholder (on every new line) */
+.ProseMirror p.is-empty::before {
+  content: "...";
+  float: left;
+  color: var(--chakra-colors-gray-200);
+  pointer-events: none;
+  height: 0;
+}
