--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -47,8 +47,8 @@ a {
     transition: all 0.25s;
     
     .wrapper {
-      min-height: 100px;
-      max-height: 200px;
+      min-height: 200px;
+      max-height: 500px;
       overflow-y: auto;
 
     }
@@ -63,13 +63,18 @@ a {
       background-color:transparent;
       overflow-y: auto;
       padding: 0;
+      font-family: "Source Code Pro", monospace;
     }
   }
 
   &.is-error { 
     &.basic {
-      border: 1px solid var(--chakra-colors-red-400);
-      box-shadow: 0 0 0 1px var(--chakra-colors-red-400);
+      .ProseMirror p.is-editor-empty:first-child::before,
+      .ProseMirror p.is-empty::before {
+        color: var(--chakra-colors-red-400);
+        
+      }
+
     }
   }
 
@@ -80,7 +85,7 @@ a {
   }
   .char-count {
     position: absolute;
-    bottom: var(--chakra-space-2);
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
   }
