--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -19,6 +19,30 @@ a {
   margin-bottom: 0.5em !important;
 }
 
+.arrow{
+    transition: transform 0.5s ease;
+    transform: translateX(0);
+
+
+    g path{
+        transition: transform 0.5s ease;
+        transform: scaleX(100%);
+    }
+
+    &:hover{
+        transform: translateX(-5px);
+
+        g path:first-child {
+            transform: scaleX(140%);
+        }
+    }
+
+    &.down{
+        transform: rotate(-90deg);
+        transform-origin: center right;
+    }
+}
+
 .aspect {
   width: 100%;
   height: 0;
