--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -269,9 +269,28 @@ a {
 
 }
 
+@media (max-width: 45rem){
+    .artwork.item {
+        .info {
+            height: 66.66vw;
+        }
+    }
+}
 .artworkDetails{
     .label{
         margin-bottom: 0.5em;
+    }
+}
+
+.exhibitionTile a{
+
+    &:before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 }
 
