--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -204,11 +204,10 @@ a {
   overflow: hidden;
   .info {
     width: 33.33%;
-    padding: 0.5rem;
     writing-mode:vertical-rl;
     transform: rotate(180deg);
     a::before {
-      width: 100vw;
+//      width: 100vw;
     }
     height: 22.22vw;
   } 
@@ -283,3 +282,13 @@ a {
     }
 }
 
+
+//.css-1hnz6hu::before {
+//width: 100%;
+//height: 100%;
+//border: 2px solid red;
+//transform: rotate(90deg) translate(0, -17%);
+//transform-origin: left top;
+//width: 200%;
+//height: 234%;
+//}
