Working links in artworkListItem (exhibition related or neutral artwork detail)

--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -24,7 +24,8 @@ a {
     transform: translate(0, 0);
     fill: inherit;
 
-    &.light g{
+    &.light g,
+    .light & g{
         fill: #000;
         stroke: #000;
     }
