--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -368,8 +368,21 @@ a {
 
 // Styled mainly return of in FieldErrorMessage.tsx
 
-.chakra-form__error-message{
-    &:before {
+//.chakra-form-control{
+//
+//  label > .chakra-form__required-indicator{
+//    color: white !important;
+//  }
+//
+//  .chakra-form__helper-text{
+//    color: inherit;
+//    opacity: 0.6;
+//    margin-bottom: 0.5rem;
+//    margin-top: 0.1rem;
+//    font-size: 0.8rem;
+//  }
+//}
 
-    }
+.muted{
+  opacity: 0.6;
 }
