--- a/apps/dapp/styles/globals.scss
+++ b/apps/dapp/styles/globals.scss
@@ -396,6 +396,13 @@ a {
 //  }
 //}
 
+.chakra-switch{
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  justify-content: space-between;
+}
+
 .muted{
   opacity: 0.6;
 }
